--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         <title>イヤホンジャックの向こう側</title>
     </head>
     <link rel="stylesheet" href="css/style.css">
-    <bode>
-        <h1>イヤホンジャックの向こう側</h1>
-    </bode>
+    <body>
+        <header>
+            <h1>COCOA</h1>
+        </header>
+        <section>
+            <h1>イヤホンジャックの向こう側</h1>
+        </section>
+    </body>
 </html>
