--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             </div>
             <!-- span範囲を示す -->
         <div class="description">
-            <img src="img/jacket.png" alt="イヤホンジャックの向こう側のジャケット写真">
+            <a href="#"><img src="img/jacket.png" alt="イヤホンジャックの向こう側のジャケット写真"></a>
+            <!-- #はリンク先が決まっていないときに使う -->
             <!-- width heigtで大きさ指定もできるが、css側ですることも多い -->
             <!-- altタグは、エラーで画像が出なかったり音声ツールを使ったときに出る文字 -->
             <!-- psgは容量大きくwebでは使えない、jpg最適、pngjpgより大きいがイラストとかは向いてるサイズ大きいけどね、svgpingより高画質 -->
@@ -42,6 +43,10 @@
 
         </div>
         </section>
+        <footer>
+            &copy;2023 COCOA
+            <!-- 著作権表記 -->
+        </footer>
     </div>        
     </body>
 </html>
